--- a/index.html
+++ b/index.html
@@ -5,28 +5,28 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="/css/style.css">
+    <link rel="stylesheet" href="./css/style.css">
     <title>Instagram</title>
 </head>
 
 <body>
     <div class="instacel">
         <div class="phone">
-            <img src="/assets/CelInsta.png" alt="Phone">
+            <img src="./assets/CelInsta.png" alt="Phone">
         </div>
     </div>
 
     <div class="login">
         <div class="inputlogin">
             <form class="inputs" action="">
-                <img class="logoinsta" src="/assets/logoinsta.png" alt="Instagram">
+                <img class="logoinsta" src="./assets/logoinsta.png" alt="Instagram">
                 <input type="text" name="login" value="" placeholder="Phone number, username, or email">
                 <input type="password" name="password" id="password" name="password" placeholder="Password">
                 <button>Log In</button>
                 <spam>OR</spam>
             </form>
             <div class="inputlogin1">
-                <a href=""><img src="/assets/loginwfacebook.png" alt=""></a>
+                <a href=""><img src="./assets/loginwfacebook.png" alt=""></a>
                 <a class="pass" href="">Forgot password?</a>
             </div>
         </div>
@@ -36,8 +36,8 @@
         <div class="redes">
             <p>Get the app.</p>
             <div class="apps">
-                <img class="apple" src="/assets/apple.png" alt="">
-                <img class="playstore" src="/assets/playstore.png" alt="">
+                <img class="apple" src="./assets/apple.png" alt="">
+                <img class="playstore" src="./assets/playstore.png" alt="">
             </div>
         </div>
     </div>
